k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: threadstorm
  labels:
    name: threadstorm
    app: threadstorm
    environment: production
